Fix spacing around announcements.

--- a/css/general.css
+++ b/css/general.css
@@ -231,13 +231,17 @@ body,html{
     letter-spacing:3px;
     font-weight:400!important
 }
+.announcement {
+    margin: 0px;
+    border: 0px;
+    border-radius: 0px;
+}
 .lead{
     font-size:20px;
     font-weight:400
 }
 .intro-header{
     height:100%;
-    padding-top:50px;
     padding-bottom:50px;
     color:#f8f8f8;
     background:url(../img/wrns-banner.png) no-repeat center center;
